--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,17 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
+.idea
+#.idea/modules.xml
+#.idea/jarRepositories.xml
+#.idea/compiler.xml
+#.idea/libraries/
+#*.iws
+#*.iml
+#*.ipr
+
+plan.txt
+*/memo.txt
 
 ### Eclipse ###
 .apt_generated
